--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>JavaScript Event Handling Demo</h1>
+    <h1>JavaScript Event Handling</h1>
 
     <section>
         <h2>Mouse Events</h2>
